--- a/css/menu.css
+++ b/css/menu.css
@@ -1,4 +1,4 @@
-/* Estilize o container do menu lateral */
+/* Estiliza o container do menu lateral */
 #menu-lateral-fixo {
     position: fixed;
     top: 70%;
